--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 				<b>Bioinformatics Study Group in Okayama University (BSGOU)</b> is an international academic community committed to advancing the digital transformation of biological and biomedical research. We unite students, researchers, clinicians, and engineers to collaboratively explore how high-throughput data and integrative computation can drive new theories, models, and discoveries in life sciences.
 			</p>
 
+			<h4 href="README.html">Click here to check the detailed "Vision and Strategic Plan" of BSGOU</h4>
+
 			<h3 class="titles"
 				data-lang-en="Core Values"
 				data-lang-ja="基本的価値"
