--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 	<link rel="icon" type="img/png" href="img/TabLogo.png" sizes="32x32">
 	<!--Fav and touch icons-->
 	<link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png">
+	<style>
+		.hover-pink {
+		color: rgb(37, 105, 168);
+		text-decoration: none;
+		transition: color 0.2s;
+		}
+		.hover-pink:hover {
+		color: hotpink;
+		}
+    </style>
 </head>
 <body id="home">
 	<!-- head-section -->
@@ -89,7 +99,9 @@
 				<b>Bioinformatics Study Group in Okayama University (BSGOU)</b> is an international academic community committed to advancing the digital transformation of biological and biomedical research. We unite students, researchers, clinicians, and engineers to collaboratively explore how high-throughput data and integrative computation can drive new theories, models, and discoveries in life sciences.
 			</p>
 
-			<h4 href="README.html">Click here to check the detailed "Vision and Strategic Plan" of BSGOU</h4>
+			<p id="services-desc">
+  				<a href="README.html" class="hover-pink">Click here to check the detailed "Vision and Strategic Plan" of BSGOU</a>
+			</p>
 
 			<h3 class="titles"
 				data-lang-en="Core Values"
