--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
   			<button onclick="switchLanguage('en')">English</button>
   			<button onclick="switchLanguage('ja')">日本語</button>
   			<button onclick="switchLanguage('cn')">中文</button>
+			<a href="https://github.com/LabOnoM" target="_blank" style="text-decoration: none;">
+  				<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" width="30" style="vertical-align: middle;">
+  				<span style="margin-left: 5px; color: black;"></span>
+			</a>
 		</div>
 		<div class="container">
 			<h3 class="titles"
