--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			</p>
 
 			<p id="services-desc">
-  				<a href="README.html" class="hover-pink">Click here to check the detailed "Vision and Strategic Plan" of BSGOU</a>
+  				<a href="https://labonom.github.io/README.html" class="hover-pink">Click here to check the detailed "Vision and Strategic Plan" of BSGOU</a>
 			</p>
 
 			<h3 class="titles"
@@ -117,7 +117,7 @@
 
 				<li>
 					<div class="service-img"><img src="img/icons/Transdisciplinary.png" alt="icon" /></div>
-					<h3><a href="/sources/Transdisciplinary_Collaboration.html" data-lang-en="Transdisciplinary Collaboration" data-lang-ja="学際的な協力" data-lang-cn="跨学科协作">Transdisciplinary Collaboration</a></h3>
+					<h3><a href="https://labonom.github.io/sources/Transdisciplinary_Collaboration.html" data-lang-en="Transdisciplinary Collaboration" data-lang-ja="学際的な協力" data-lang-cn="跨学科协作">Transdisciplinary Collaboration</a></h3>
 					<p data-lang-en="We unite biology, medicine, engineering, and more to solve complex biological problems together."
 						data-lang-ja="私たちは生物学・医学・工学など多分野の視点を結集し、複雑な生物学的課題の解決に取り組みます。"
 						data-lang-cn="我们融合生物学、医学、工程等多学科视角，协同解决复杂的生物问题。">
@@ -182,6 +182,16 @@
 					data-lang-ja="私たちは大胆な発想と前向きな戦略で分野をリードします。"
 					data-lang-cn="我们以大胆的思想和前瞻性策略引领该领域的发展。">
 					We lead the field with bold ideas and forward-looking strategies.
+				</p>
+				</li>
+
+				<li class="right-side">
+				<div class="service-img"><img src="img/icons/Serve.png" alt="icon" /></div>
+				<h3><a href="#" data-lang-en="Serve the People" data-lang-ja="人民のために尽くす" data-lang-cn="为人民服务">Serve the People</a></h3>
+				<p data-lang-en="We aim not only to advance science but also to serve public health through bioinformatics."
+					data-lang-ja="私たちは科学の発展だけでなく、生物情報学の成果を国民の健康に役立てることを重視しています。"
+					data-lang-cn="我们不仅推动科研进步，更致力于将生物信息学成果服务于人民健康。">
+					We aim not only to advance science but also to serve public health through bioinformatics.
 				</p>
 				</li>
 
@@ -282,38 +292,34 @@
 			<p id="about-desc">...</p>
 			<ul>
 				<li>
-					<img src="img/about/WZY.jpg" alt="staff" />
+					<!-- <img src="img/about/WZY.jpg" alt="staff" /> -->
 					<h3>WANG Ziyi</h3>
 					<h6>Bioinformatician</h6>
 					<div class="social-staff">
 						<ul>
-							<li class="facebook"><a href="#"></a></li>
-							<li class="twitter"><a href="#"></a></li>
-							<li class="dribbble"><a href="#"></a></li>
+							<li class="facebook"><a href="https://www.facebook.com/W751747834/" target="_blank"></a></li>
+							<li class="twitter"><a href="https://twitter.com/Dentist_Wong" target="_blank"></a></li>
+							<li class="dribbble"><a href="https://linktr.ee/wongziyi" target="_blank"></a></li>
 						</ul>
 					</div>
 				</li>
 				<li>
-					<img src="img/about/OM.jpg" alt="staff" />
 					<h3>ONO Mitsuaki</h3>
 					<h6>Bioinformatician</h6>
 					<div class="social-staff">
 						<ul>
-							<li class="facebook"><a href="#"></a></li>
-							<li class="twitter"><a href="#"></a></li>
-							<li class="dribbble"><a href="#"></a></li>
+							<li class="dribbble"><a href="https://researchmap.jp/mitsuakiono" target="_blank"></a></li>
 						</ul>
 					</div>
 				</li>
 				<li class="right-side">
-					<img src="img/about/Who.jpg" alt="staff" />
-					<h3>TOMISAKA</h3>
+					<h3>TOMISAKA Toshiyuki</h3>
 					<h6>Staff</h6>
 					<div class="social-staff">
 						<ul>
-							<li class="facebook"><a href="#"></a></li>
-							<li class="twitter"><a href="#"></a></li>
-							<li class="dribbble"><a href="#"></a></li>
+							<li class="facebook"><a href="#" target="_blank"></a></li>
+							<li class="twitter"><a href="#" target="_blank"></a></li>
+							<li class="dribbble"><a href="#" target="_blank"></a></li>
 						</ul>
 					</div>
 				</li>
