Update staff profile

--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
 			<p id="about-desc">...</p>
 			<ul>
 				<li>
-					<!-- <img src="img/about/WZY.jpg" alt="staff" /> -->
-					<h3>WANG Ziyi</h3>
+					<img src="img/about/WZY.png" alt="staff" />
+					<h3>Dr. Wang</h3>
 					<h6>Bioinformatician</h6>
 					<div class="social-staff">
 						<ul>
@@ -304,7 +304,8 @@
 					</div>
 				</li>
 				<li>
-					<h3>ONO Mitsuaki</h3>
+					<img src="img/icons/Bioinformatician.png" alt="staff" />
+					<h3>Dr. Ono</h3>
 					<h6>Bioinformatician</h6>
 					<div class="social-staff">
 						<ul>
@@ -313,7 +314,8 @@
 					</div>
 				</li>
 				<li class="right-side">
-					<h3>TOMISAKA Toshiyuki</h3>
+					<img src="img/icons/Technician.png" alt="staff" />
+					<h3>Mr. Tomisaka</h3>
 					<h6>Staff</h6>
 					<div class="social-staff">
 						<ul>
