--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 				<li class="right-side">
 				<div class="service-img"><img src="img/icons/Theory-Driven.png" alt="icon" /></div>
-				<h3><a href="#" data-lang-en="Theory-Driven Understanding" data-lang-ja="理論に基づく理解" data-lang-cn="理论驱动的理解">Theory-Driven Understanding</a></h3>
+				<h3><a href="https://labonom.github.io/sources/Theory_Driven_Understanding.html" data-lang-en="Theory-Driven Understanding" data-lang-ja="理論に基づく理解" data-lang-cn="理论驱动的理解">Theory-Driven Understanding</a></h3>
 				<p data-lang-en="We go beyond data analysis to build new models that explain biological complexity."
 					data-lang-ja="データ解析に留まらず、生物の複雑性を説明する新たな理論モデルの構築を目指します。"
 					data-lang-cn="我们超越数据分析，致力于构建解释生命复杂性的理论模型。">
