--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 				<li>
 				<div class="service-img"><img src="img/icons/Open Innovation.png" alt="icon" /></div>
-				<h3><a href="#" data-lang-en="Open Innovation" data-lang-ja="オープン・イノベーション" data-lang-cn="开放式创新">Open Innovation</a></h3>
+				<h3><a href="https://labonom.github.io/sources/Open_Innovation.html" data-lang-en="Open Innovation" data-lang-ja="オープン・イノベーション" data-lang-cn="开放式创新">Open Innovation</a></h3>
 				<p data-lang-en="We support open science, open-source development, and community collaboration."
 					data-lang-ja="私たちはオープンサイエンス、オープンソース開発、コミュニティとの連携を推進します。"
 					data-lang-cn="我们支持开放科学、开源开发和社区协作。">
@@ -147,7 +147,7 @@
 
 				<li class="right-side">
 				<div class="service-img"><img src="img/icons/Global.png" alt="icon" /></div>
-				<h3><a href="#" data-lang-en="Global Inclusivity" data-lang-ja="国際的な包摂性" data-lang-cn="全球包容性">Global Inclusivity</a></h3>
+				<h3><a href="https://labonom.github.io/sources/Global_Inclusivityn.html" data-lang-en="Global Inclusivity" data-lang-ja="国際的な包摂性" data-lang-cn="全球包容性">Global Inclusivity</a></h3>
 				<p data-lang-en="We welcome diverse members from all backgrounds and career stages."
 					data-lang-ja="私たちは、あらゆる背景やキャリア段階の多様なメンバーを歓迎します。"
 					data-lang-cn="我们欢迎来自不同背景和职业阶段的多样化成员。">
@@ -157,7 +157,7 @@
 
 				<li>
 				<div class="service-img"><img src="img/icons/Education.png" alt="icon" /></div>
-				<h3><a href="#" data-lang-en="Education for Empowerment" data-lang-ja="教育による力の育成" data-lang-cn="教育赋能">Education for Empowerment</a></h3>
+				<h3><a href="https://labonom.github.io/sources/Education_for_Empowerment.html" data-lang-en="Education for Empowerment" data-lang-ja="教育による力の育成" data-lang-cn="教育赋能">Education for Empowerment</a></h3>
 				<p data-lang-en="We offer training and mentorship to bridge global skill gaps in bioinformatics."
 					data-lang-ja="私たちは教育とメンタリングを通じて、バイオインフォマティクスにおける世界的なスキルギャップを埋めます。"
 					data-lang-cn="我们提供培训与指导，致力于缩小全球生物信息学技能差距。">
@@ -167,7 +167,7 @@
 
 				<li class="right-side">
 				<div class="service-img"><img src="img/icons/Scientific.png" alt="icon" /></div>
-				<h3><a href="#" data-lang-en="Scientific Integrity and Responsibility" data-lang-ja="科学的誠実さと責任" data-lang-cn="科研诚信与责任">Scientific Integrity and Responsibility</a></h3>
+				<h3><a href="https://labonom.github.io/sources/Scientific_Integrity_and_Responsibility.html" data-lang-en="Scientific Integrity and Responsibility" data-lang-ja="科学的誠実さと責任" data-lang-cn="科研诚信与责任">Scientific Integrity and Responsibility</a></h3>
 				<p data-lang-en="We uphold ethical practices, reproducibility, and responsible data use."
 					data-lang-ja="私たちは倫理的実践、再現性、責任あるデータの利用を重視します。"
 					data-lang-cn="我们坚持伦理实践、科研可重复性与负责任地使用数据。">
@@ -177,7 +177,7 @@
 
 				<li>
 				<div class="service-img"><img src="img/icons/Visionary.png" alt="icon" /></div>
-				<h3><a href="#" data-lang-en="Visionary Leadership" data-lang-ja="先見的なリーダーシップ" data-lang-cn="前瞻性领导力">Visionary Leadership</a></h3>
+				<h3><a href="https://labonom.github.io/sources/Visionary_Leadership.html" data-lang-en="Visionary Leadership" data-lang-ja="先見的なリーダーシップ" data-lang-cn="前瞻性领导力">Visionary Leadership</a></h3>
 				<p data-lang-en="We lead the field with bold ideas and forward-looking strategies."
 					data-lang-ja="私たちは大胆な発想と前向きな戦略で分野をリードします。"
 					data-lang-cn="我们以大胆的思想和前瞻性策略引领该领域的发展。">
@@ -187,7 +187,7 @@
 
 				<li class="right-side">
 				<div class="service-img"><img src="img/icons/Serve.png" alt="icon" /></div>
-				<h3><a href="#" data-lang-en="Serve the People" data-lang-ja="人民のために尽くす" data-lang-cn="为人民服务">Serve the People</a></h3>
+				<h3><a href="https://labonom.github.io/sources/Serve_the_People.html" data-lang-en="Serve the People" data-lang-ja="人民のために尽くす" data-lang-cn="为人民服务">Serve the People</a></h3>
 				<p data-lang-en="We aim not only to advance science but also to serve public health through bioinformatics."
 					data-lang-ja="私たちは科学の発展だけでなく、生物情報学の成果を国民の健康に役立てることを重視しています。"
 					data-lang-cn="我们不仅推动科研进步，更致力于将生物信息学成果服务于人民健康。">
