Update the work list

--- a/index.html
+++ b/index.html
@@ -222,6 +222,14 @@
 						<img class="gallery-img" src="img/gallery/FEA.jpg" alt="img" />
 						<a href="https://www.youtube.com/watch?v=746ZXoimuj8" target=”_blank”><div class="overlay-works"></div></a>
 					</li>
+					<li class="gallery-item" data-id="id-1" data-type="Software">
+						<img class="gallery-img" src="img/gallery/Wave_Analysis.jpg" alt="img" />
+						<a href="https://wong-ziyi.shinyapps.io/wave_analysis_wzy/" target=”_blank”><div class="overlay-works"></div></a>
+					</li>
+					<li class="gallery-item" data-id="id-1" data-type="Software">
+						<img class="gallery-img" src="img/gallery/Cosinor_Anallysis_of_Rhythms.jpg" alt="img" />
+						<a href="https://wong-ziyi.shinyapps.io/Cosinor_Analysis_of_Rhythms/" target=”_blank”><div class="overlay-works"></div></a>
+					</li>
 					<!-- /Software -->
 					<!-- Bioinformatics-Oriented Studies -->
 					<li class="gallery-item" data-id="id-1" data-type="BOS">
