--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 				<div class="clearfix"></div>
 			</div>
 			<div style="text-align: right; padding: 10px;">
+				<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge"/>
 				<button onclick="switchLanguage('en')">English</button>
 				<button onclick="switchLanguage('ja')">日本語</button>
 				<button onclick="switchLanguage('cn')">中文</button>
@@ -389,7 +390,7 @@
 		<!-- Footer-section -->
 		<div class="footer">
 			<div class="container">
-				<p id="cp-text"><span id="copyright"></span> <img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge"/></p>
+				<p id="cp-text"><span id="copyright"></span></p>
 			</div>
 		</div>
 		<!-- /Footer-section -->
