--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
 						</div>
 					</li>
 					<li>
-						<img src="img/icons/Bioinformatician.png" alt="staff" />
+						<img src="img/icons/ChiefScientist.png" alt="staff" />
 						<h3>Dr. Ono</h3>
-						<h6>Bioinformatician</h6>
+						<h6>Chief Scientist</h6>
 						<div class="social-staff">
 							<ul>
 								<li class="dribbble"><a href="https://researchmap.jp/mitsuakiono" target="_blank"></a></li>
