--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
 				<div class="clearfix"></div>
 			</div>
 			<div style="text-align: right; padding: 10px;">
+				<!-- Replace "UCxxxxxxxxxx" with your Channel ID -->
+				<div style="margin: 12px 0;">
+					<script src="https://apis.google.com/js/platform.js"></script>
+					<div class="g-ytsubscribe"
+						data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q"
+						data-layout="default"
+						data-count="default"></div>
+				</div>
 				<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge"/>
 				<button onclick="switchLanguage('en')">English</button>
 				<button onclick="switchLanguage('ja')">日本語</button>
