--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@
 						data-layout="default"
 						data-count="default"></div>
 				</div>
+				<a href="https://github.com/LabOnoM" target="_blank">
+				<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
+				</a>
 				<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge"/>
 				<button onclick="switchLanguage('en')">English</button>
 				<button onclick="switchLanguage('ja')">日本語</button>
 				<button onclick="switchLanguage('cn')">中文</button>
-				<a href="https://github.com/LabOnoM" target="_blank" style="text-decoration: none;">
-					<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub logo" width="30" style="vertical-align: middle;">
-					<span style="margin-left: 5px; color: black;"></span>
-				</a>
 			</div>
 			<div class="container">
 				<h3 class="titles"
