--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@
 			</div>
 			<div style="text-align: right; padding: 10px;">
 				<!-- Replace "UCxxxxxxxxxx" with your Channel ID -->
-				<div style="margin: 12px 0;">
-					<script src="https://apis.google.com/js/platform.js"></script>
-					<div class="g-ytsubscribe"
+				<script src="https://apis.google.com/js/platform.js"></script>
+				<div class="g-ytsubscribe"
 						data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q"
 						data-layout="default"
-						data-count="default"></div>
+						data-count="default">
 				</div>
 				<a href="https://github.com/LabOnoM" target="_blank">
 				<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
