--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 			.hover-pink:hover {
 			color: hotpink;
 			}
+			.badge-bar {
+			display: flex;
+			align-items: center;
+			gap: 8px;
+			margin: 16px 0 24px 0;
+			width: 100%; /* ensures full row width */
+			}
 		</style>
 	</head>
 	<body id="home">
@@ -88,7 +95,7 @@
 				</div>
 				<div class="clearfix"></div>
 			</div>
-			<div style="text-align: right; padding: 10px;">
+			<div class="badge-bar">
 				<!-- Replace "UCxxxxxxxxxx" with your Channel ID -->
 				<script src="https://apis.google.com/js/platform.js"></script>
 				<div class="g-ytsubscribe"
@@ -96,6 +103,7 @@
 						data-layout="default"
 						data-count="default">
 				</div>
+				<span style="flex:1"></span>
 				<a href="https://github.com/LabOnoM" target="_blank">
 				<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
 				</a>
