--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
 			align-items: center;
 			gap: 8px;
 			margin: 16px 0 24px 0;
-			width: 100%; /* ensures full row width */
+			width: 100%;
+			flex-wrap: wrap;       /* <-- allow wrapping on small screens */
+			box-sizing: border-box;
+			}
+			@media (max-width: 600px) {
+				.badge-bar {
+					flex-direction: column;
+					align-items: stretch;    /* or center, if you prefer */
+					gap: 4px;
+				}
+				.badge-bar span[style*="flex:1"] {
+					display: none;           /* hide spacer so badges stack */
+				}
 			}
 		</style>
 	</head>
