--- a/index.html
+++ b/index.html
@@ -459,10 +459,17 @@
 		<div id="contact" class="contact">
 			<div class="container">
 				<h3 class="titles titles-white-c">Contact</h3>
+				<!-- Google Map Embed -->
+				<div class="contact-map" style="margin: 32px 0; text-align: center;">
+					<iframe
+					src="https://www.google.com/maps/place/Medical+Research+Building,+2-ch%C5%8Dme-5+Shikatach%C5%8D,+Kita+Ward,+Okayama,+700-0914/@34.6507208,133.9189645,20.37z/data=!4m6!3m5!1s0x355407bbc658f25b:0xf4bbef2d5366def4!8m2!3d34.6507545!4d133.9188239!16s%2Fg%2F11b8vgbfkg?entry=ttu&g_ep=EgoyMDI1MDUyNy4wIKXMDSoASAFQAw%3D%3D"
+					width="90%" height="320" style="border:0; border-radius: 12px;"
+					allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade">
+					</iframe>
+				</div>
 				<div class="contact-desc">
-					<h4>...</h4>
-					<p>...</p>
-					<p>...</p>
+					<p>2-5-1 Shikata-cho, Kita-ku, Okayama City, Okayama 700-8558, Japan</p>
 					<p><a href="mailto:wangziyi@s.okayama-u.ac.jp">wangziyi@s.okayama-u.ac.jp</a></p>
 					<div class="social">
 						<ul>
