update contact method

--- a/index.html
+++ b/index.html
@@ -453,34 +453,34 @@
 			</div>
 		</div>
 		<!-- /About-section -->
-		<!-- GoogleMap-section -->
-		<!-- /GoogleMap-section -->
 		<!-- Contact-section -->
 		<div id="contact" class="contact">
 			<div class="container">
 				<h3 class="titles titles-white-c">Contact</h3>
-				<!-- Google Map Embed -->
-				<div class="contact-map" style="margin: 32px 0; text-align: center;">
-					<iframe
-					src="https://www.google.com/maps/place/Medical+Research+Building,+2-ch%C5%8Dme-5+Shikatach%C5%8D,+Kita+Ward,+Okayama,+700-0914/@34.6507208,133.9189645,20.37z/data=!4m6!3m5!1s0x355407bbc658f25b:0xf4bbef2d5366def4!8m2!3d34.6507545!4d133.9188239!16s%2Fg%2F11b8vgbfkg?entry=ttu&g_ep=EgoyMDI1MDUyNy4wIKXMDSoASAFQAw%3D%3D"
-					width="90%" height="320" style="border:0; border-radius: 12px;"
-					allowfullscreen="" loading="lazy"
-					referrerpolicy="no-referrer-when-downgrade">
-					</iframe>
+				<div class="contact-flex">
+				<div class="contact-map">
+					<iframe width="425" height="350"
+					src="https://www.openstreetmap.org/export/embed.html?bbox=133.91945332288745%2C34.650715930421256%2C133.92299383878708%2C34.652730417397514&layer=mapnik&marker=34.6522009%2C133.9211860"
+					style="border: 1px solid black"></iframe>
+					<br/>
+					<small>
+					<a href="https://www.openstreetmap.org/?mlat=34.6522009&mlon=133.9211860#map=19/34.65220/133.92119">View Larger Map</a>
+					</small>
 				</div>
 				<div class="contact-desc">
-					<p>2-5-1 Shikata-cho, Kita-ku, Okayama City, Okayama 700-8558, Japan</p>
+					<p>〒700-8558<br>2-5-1 Shikata-cho, Kita-ku,<br>Okayama City, Okayama,<br>Japan</p>
 					<p><a href="mailto:wangziyi@s.okayama-u.ac.jp">wangziyi@s.okayama-u.ac.jp</a></p>
 					<div class="social">
-						<ul>
-							<li class="facebook"><a href="#"></a></li>
-							<li class="twitter"><a href="#"></a></li>
-							<li class="behance"><a href="#"></a></li>
-							<li class="dribbble"><a href="#"></a></li>
-							<li class="linkedin"><a href="#"></a></li>
-							<li class="clearfix"></li>
-						</ul>
+					<ul>
+						<li class="facebook"><a href="#"></a></li>
+						<li class="twitter"><a href="#"></a></li>
+						<li class="behance"><a href="#"></a></li>
+						<li class="dribbble"><a href="#"></a></li>
+						<li class="linkedin"><a href="#"></a></li>
+						<li class="clearfix"></li>
+					</ul>
 					</div>
+				</div>
 				</div>
 			</div>
 		</div>
