--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 				<h3 class="titles titles-white-c">Contact</h3>
 				<div class="contact-flex">
 				<div class="contact-map">
-					<iframe width="425" height="350"
+					<iframe width="100%" height="350"
 					src="https://www.openstreetmap.org/export/embed.html?bbox=133.91945332288745%2C34.650715930421256%2C133.92299383878708%2C34.652730417397514&layer=mapnik&marker=34.6522009%2C133.9211860"
 					style="border: 1px solid black"></iframe>
 					<br/>
