--- a/index.html
+++ b/index.html
@@ -36,22 +36,28 @@
 			color: hotpink;
 			}
 			.badge-bar {
-			display: flex;
-			align-items: center;
-			gap: 8px;
-			margin: 16px 0 24px 0;
-			width: 100%;
-			flex-wrap: wrap;       /* <-- allow wrapping on small screens */
-			box-sizing: border-box;
+				display: flex;
+				align-items: center;
+				gap: 10px;
+				padding: 8px 16px;
+				background: transparent;
+				z-index: 1002;
+				position: relative;
 			}
-			@media (max-width: 600px) {
+			.badge-bar span {
+				flex: 1;
+			}
+
+			/* Responsive: stack badges on small screens */
+			@media (max-width: 700px) {
 				.badge-bar {
 					flex-direction: column;
-					align-items: stretch;    /* or center, if you prefer */
-					gap: 4px;
+					align-items: flex-start;
+					gap: 6px;
+					padding: 8px 8px;
 				}
-				.badge-bar span[style*="flex:1"] {
-					display: none;           /* hide spacer so badges stack */
+				.badge-bar span {
+					display: none; /* disables the flex push */
 				}
 			}
 			#forkongithub a {
