--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
 		<link rel="stylesheet" type="text/css" href="css/jquery.fancybox-1.3.4.css" />
 		<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
-		<link rel="icon" type="img/png" href="img/TabLogo.png" sizes="32x32">
-		<!--Fav and touch icons-->
-		<link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png">
+
+		<link rel="icon" type="image/png" href="img/favicons/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="img/favicons/favicon.svg" />
+		<link rel="shortcut icon" href="img/favicons/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png" />
+		<link rel="manifest" href="img/favicons/site.webmanifest" />
+		<meta name="msapplication-TileColor" content="#ffc40d">
+		<meta name="theme-color" content="#ffffff">
+
 		<style>
 			.hover-pink {
 			color: rgb(37, 105, 168);
