--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RWF876HNKW"></script>
 		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
 
-		gtag('config', 'G-RWF876HNKW');
+			gtag('config', 'G-RWF876HNKW');
 		</script>
 		<!--Page Title-->
 		<title>BSGOU</title>
@@ -29,6 +29,7 @@
 		<link rel="shortcut icon" href="img/favicons/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png" />
 		<link rel="manifest" href="img/favicons/site.webmanifest" />
+		<link rel="sitemap" type="application/xml" href="/assets/sitemap.xml">
 		<meta name="msapplication-TileColor" content="#ffc40d">
 		<meta name="theme-color" content="#ffffff">
 
