--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<link rel="shortcut icon" href="img/favicons/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png" />
 		<link rel="manifest" href="img/favicons/site.webmanifest" />
-		<link rel="sitemap" type="application/xml" href="/assets/sitemap.xml">
+		<link rel="sitemap" type="application/xml" href="/sitemap.xml">
 		<meta name="msapplication-TileColor" content="#ffc40d">
 		<meta name="theme-color" content="#ffffff">
 
