--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Set Viewport-->
 		<meta name="viewport" content="user-scalable=no,initial-scale=1.0, maximum-scale=1.0 width=device-width" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<meta name="follow.it-verification-code" content="f1zx2vZPUZPWnXULwthk"/>
+		<meta name="follow.it-verification-code" content="bAjR1e3VsgJ1RAUQk1lz"/>
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="css/jquery.fancybox-1.3.4.css" />
 		<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
