--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 				</div>
 				<div class="contact-desc">
 					<p>〒700-8558<br>2-5-1 Shikata-cho, Kita-ku,<br>Okayama City, Okayama,<br>Japan</p>
-					<p><a href="mailto:wangziyi@s.okayama-u.ac.jp">wangziyi@s.okayama-u.ac.jp</a></p>
+					<p><a href="mailto:BSGOU@BS-GOU.com">BSGOU@BS-GOU.com</a></p>
 					<div class="social">
 					<ul>
 						<li class="facebook"><a href="#"></a></li>
