--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 						data-layout="default"
 						data-count="default">
 				</div>
+				<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @BSGOU_X</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				<span style="flex:1"></span>
 				<a href="https://github.com/LabOnoM" target="_blank">
 				<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
@@ -522,15 +523,17 @@
 					<p>〒700-8558<br>2-5-1 Shikata-cho, Kita-ku,<br>Okayama City, Okayama,<br>Japan</p>
 					<p><a href="mailto:BSGOU@BS-GOU.com">BSGOU@BS-GOU.com</a></p>
 					<div class="social">
-					<ul>
-						<li class="facebook"><a href="#"></a></li>
-						<li class="twitter"><a href="#"></a></li>
-						<li class="behance"><a href="#"></a></li>
-						<li class="dribbble"><a href="#"></a></li>
-						<li class="linkedin"><a href="#"></a></li>
-						<li class="clearfix"></li>
-					</ul>
+						<ul>
+							<li class="facebook"><a href="#"></a></li>
+							<li class="twitter"><a href="#"></a></li>
+							<li class="behance"><a href="#"></a></li>
+							<li class="dribbble"><a href="#"></a></li>
+							<li class="linkedin"><a href="#"></a></li>
+							<li class="clearfix"></li>
+						</ul>
 					</div>
+					<a class="twitter-timeline" data-width="600" data-height="800" data-dnt="true" href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw">Tweets by BSGOU_X</a>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 				</div>
 			</div>
