--- a/index.html
+++ b/index.html
@@ -505,6 +505,18 @@
 			</div>
 		</div>
 		<!-- /About-section -->
+		<!-- Members-section -->
+		<div id="Members" class="quote">
+			<div class="container">
+				<section id="members">
+					<h2><br></h2>
+					<iframe src="members.html" width="100%" height="400"
+						style="border: none; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 12px;" loading="lazy"
+						title="BSGOU Members"></iframe>
+				</section>
+			</div>
+		</div>
+		<!-- /Members-section -->
 		<!-- Contact-section -->
 		<div id="contact" class="contact">
 			<div class="container">
