--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 		<!-- Members-section -->
 		<div id="Members" class="quote">
 			<div class="container">
-				<section id="members">
+				<section>
 					<h2><br></h2>
 					<iframe src="members.html" width="100%" height="400"
 						style="border: none; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 12px;" loading="lazy"
