Testing iframe plugin

--- a/index.html
+++ b/index.html
@@ -247,6 +247,17 @@
 					<b>Bioinformatics Study Group in Okayama University (BSGOU)</b> is an international academic community committed to advancing the digital transformation of biological and biomedical research. We unite students, researchers, clinicians, and engineers to collaboratively explore how high-throughput data and integrative computation can drive new theories, models, and discoveries in life sciences.
 				</p>
 
+				<!-- Members-section -->
+				<div class="container">
+					<section>
+						<h2><br></h2>
+						<iframe src="https://labonom.github.io/sources/Contributions.html" width="100%" height="800"
+							style="border: none; box-shadow: 0 0 10px rgba(0,0,0,0.1); border-radius: 12px;" loading="lazy"
+							title="BSGOU Members"></iframe>
+					</section>
+				</div>
+				<!-- /Members-section -->
+
 				<p id="services-desc">
 					<a href="https://labonom.github.io/README.html" class="hover-pink">Click here to check the detailed "Vision and Strategic Plan" of BSGOU</a>
 				</p>
