--- a/index.html
+++ b/index.html
@@ -543,12 +543,12 @@
 					<p><a href="mailto:BSGOU@BS-GOU.com">BSGOU@BS-GOU.com</a></p>
 					<div class="social">
 						<ul>
-							<li class="facebook"><a href="#"></a></li>
-							<li class="twitter"><a href="#"></a></li>
-							<li class="behance"><a href="#"></a></li>
-							<li class="dribbble"><a href="#"></a></li>
-							<li class="linkedin"><a href="#"></a></li>
-							<li class="clearfix"></li>
+							<!-- <li class="facebook"><a href="#"></a></li> -->
+							<li class="twitter"><a href="https://x.com/BSGOU_X" target="_blank"></a></li>
+							<!-- <li class="behance"><a href="#"></a></li> -->
+							<!-- <li class="dribbble"><a href="#"></a></li> -->
+							<!-- <li class="linkedin"><a href="#"></a></li> -->
+							<!-- <li class="clearfix"></li> -->
 						</ul>
 					</div>
 				</div>
