--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
 					width: 100%;
 				}
 			}
+			.badge-bar {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			justify-content: space-between;  /* Ensures buttons stick to right */
+			gap: 10px;
+			padding: 8px 16px;
+			max-width: 100%;
+			box-sizing: border-box;
+			}
+
+			.badge-bar button {
+			white-space: nowrap;
+			}
 		</style>
 	</head>
 	<body id="home">
@@ -214,23 +228,24 @@
 				</div>
 				<div class="clearfix"></div>
 			</div>
-			<div class="badge-bar">
-				<!-- Replace "UCxxxxxxxxxx" with your Channel ID -->
-				<script src="https://apis.google.com/js/platform.js"></script>
-				<div class="g-ytsubscribe"
-						data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q"
-						data-layout="default"
-						data-count="default">
+			<div class="container">
+				<div class="badge-bar">
+					<!-- Replace "UCxxxxxxxxxx" with your Channel ID -->
+					<script src="https://apis.google.com/js/platform.js"></script>
+					<div class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default">
+					</div>
+					<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow
+						@BSGOU_X</a>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<span style="flex:1"></span>
+					<a href="https://github.com/LabOnoM" target="_blank">
+						<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
+					</a>
+					<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge" />
+					<button onclick="switchLanguage('en')">English</button>
+					<button onclick="switchLanguage('ja')">日本語</button>
+					<button onclick="switchLanguage('cn')">中文</button>
 				</div>
-				<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @BSGOU_X</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<span style="flex:1"></span>
-				<a href="https://github.com/LabOnoM" target="_blank">
-				<img src="https://img.shields.io/badge/GitHub-Profile-black?logo=github" alt="GitHub profile" />
-				</a>
-				<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge"/>
-				<button onclick="switchLanguage('en')">English</button>
-				<button onclick="switchLanguage('ja')">日本語</button>
-				<button onclick="switchLanguage('cn')">中文</button>
 			</div>
 			<div class="container">
 				<h3 class="titles"
