--- a/index.html
+++ b/index.html
@@ -163,15 +163,34 @@
 			display: flex;
 			flex-wrap: wrap;
 			align-items: center;
-			justify-content: space-between;  /* Ensures buttons stick to right */
+			justify-content: space-between;
 			gap: 10px;
 			padding: 8px 16px;
-			max-width: 100%;
 			box-sizing: border-box;
 			}
 
 			.badge-bar button {
+			margin: 0;
+			padding: 6px 12px;
+			font-size: 14px;
 			white-space: nowrap;
+			border: 1px solid #ccc;
+			background-color: #fff;
+			border-radius: 4px;
+			cursor: pointer;
+			}
+
+			.badge-bar img {
+			vertical-align: middle;
+			height: auto;
+			max-height: 24px;
+			}
+
+			@media (max-width: 700px) {
+			.badge-bar {
+				flex-direction: column;
+				align-items: center;
+			}
 			}
 		</style>
 	</head>
