--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 				<div class="badge-bar">
 						<!-- YouTube -->
 						<script src="https://apis.google.com/js/platform.js"></script>
-						<div class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default"></div>
+						<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default"></a>
 
 						<!-- Twitter -->
 						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow
