--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@
 			.hover-pink:hover {
 			color: hotpink;
 			}
+			.badge-bar {
+				display: flex;
+				align-items: center;
+				gap: 10px;
+				padding: 8px 16px;
+				background: transparent;
+				z-index: 1002;
+				position: relative;
+			}
+			.badge-bar span {
+				flex: 1;
+			}
+
+			/* Responsive: stack badges on small screens */
+			@media (max-width: 700px) {
+				.badge-bar {
+					flex-direction: column;
+					align-items: flex-start;
+					gap: 6px;
+					padding: 8px 8px;
+				}
+				.badge-bar span {
+					display: none; /* disables the flex push */
+				}
+			}
 			#forkongithub a {
 				background:#000;
 				color:#fff;
@@ -134,6 +159,51 @@
 					width: 100%;
 				}
 			}
+			.badge-bar {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			flex-wrap: wrap;
+			padding: 8px 16px;
+			gap: 12px;
+			box-sizing: border-box;
+			}
+
+			.left-badges,
+			.right-lang-buttons {
+			display: flex;
+			align-items: center;
+			flex-wrap: wrap;
+			gap: 8px;
+			}
+
+			.badge-bar button {
+			margin: 0;
+			padding: 6px 12px;
+			font-size: 14px;
+			white-space: nowrap;
+			border: 1px solid #ccc;
+			background-color: #fff;
+			border-radius: 4px;
+			cursor: pointer;
+			}
+
+			.badge-bar img {
+			vertical-align: middle;
+			max-height: 24px;
+			}
+
+			/* Mobile adjustment: center everything */
+			@media (max-width: 700px) {
+			.badge-bar {
+				flex-direction: column;
+				align-items: center;
+			}
+			.left-badges,
+			.right-lang-buttons {
+				justify-content: center;
+			}
+			}
 		</style>
 	</head>
 	<body id="home">
@@ -191,14 +261,8 @@
 			</div>
 			<div class="container">
 				<div class="badge-bar">
-						<!-- YouTube -->
-						<script src="https://apis.google.com/js/platform.js"></script>
-						<a class="g-ytsubscribe" data-channelid="UCaVVB1Gq9wcicFp_B2HKt1Q" data-layout="default" data-count="default"></a>
+					<div class="left-badges">
 
-						<!-- Twitter -->
-						<a href="https://twitter.com/BSGOU_X?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow
-							@BSGOU_X</a>
-						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 						<!-- GitHub -->
 						<a href="https://github.com/LabOnoM" target="_blank">
@@ -207,9 +271,13 @@
 
 						<!-- Visitors -->
 						<img src="https://visitor-badge.laobi.icu/badge?page_id=LabOnoM.LabOnoM.github.io" alt="visitor badge" />
+					</div>
+
+					<div class="right-lang-buttons">
 						<button onclick="switchLanguage('en')">English</button>
 						<button onclick="switchLanguage('ja')">日本語</button>
 						<button onclick="switchLanguage('cn')">中文</button>
+					</div>
 				</div>
 			</div>
 			<div class="container">
